# void-rs

./: .dir-locals.el  .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  cargo2nix.fish  flake.nix
.cargo/: config
.github/workflows/: package.yml
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/models/: store.dart
flutter/lib/widgets/: filepicker.dart  layout.dart  login.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
rust/: Cargo.toml
rust/src/cli/: store.rs
rust/src/lib/: lib.rs
src/cli/: args.rs  main.rs  store.rs
src/gui/: login.rs  main.rs
src/gui/i18n/: de.rs  en.rs  fr.rs  mod.rs  pt.rs
src/lib/: crypto.rs  filesystem.rs  lib.rs  path.rs  store.rs
tests/: Cargo.toml  store.rs
void/: Cargo.toml
void-cli/: Cargo.toml  build.rs
void-cli/src/: args.rs  main.rs  store.rs
void-ffi/: Cargo.toml
void-ffi/include/: void_ffi.h
void-ffi/src/: lib.rs
void-ffi/tests/: c_tests.rs
void-ffi/tests/c/: test_ffi.c
void-gui/: Cargo.toml  build.rs
void-gui/assets/: gschema.xml  me.acristoffers.void.desktop  me.acristoffers.void.metainfo.xml  resources.xml  style.css
void-gui/po/: LINGUAS  POTFILES.in  compile.sh  de.po  fr.po  pt_BR.po  void.pot
void-gui/po/locale/de/LC_MESSAGES/: void.mo
void-gui/po/locale/fr/LC_MESSAGES/: void.mo
void-gui/po/locale/pt_BR/LC_MESSAGES/: void.mo
void-gui/src/: application.rs  dialogs.rs  file_viewer.rs  home.rs  i18n.rs  login.rs  main.rs  settings.rs  thumbnails.rs  tree_view.rs  window.rs
void-gui/src/i18n/: de.rs  en.rs  fr.rs  mod.rs  pt.rs
void-gui/src/main_view/: dnd.rs  file_actions.rs  grid.rs  header.rs  item_actions.rs  menus.rs  mod.rs  sidebar.rs  utils.rs
void-gui/src/pages/: create_page.rs  login_page.rs  mod.rs  open_page.rs
void/src/: crypto.rs  filesystem.rs  lib.rs  path.rs  store.rs
