[package]
name = "void"
version = "0.0.1"
authors = ["Álan Crístoffer <acristoffers@gmail.com>"]
edition = "2018"

[dependencies]
aes = "0.5.0"
blake2 = "0.9.0"
block-modes = "0.6.1"
bytesize = "1.0.1"
clap = "2.33.3"
flexbuffers = "0.1.1"
hex = "0.4.2"
hkdf = "0.9.0"
itertools = "0.9.0"
path-absolutize = "3.0.6"
prettytable-rs = "0.8.0"
rand = "0.7.3"
regex = "1.3.9"
rpassword = "5.0.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
structopt = "0.3.17"
tree_magic = "0.2.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"
web-view = "0.6.3"

# Add this to .cargo/config to use hardware-accelerated AES
# [build]
# rustflags = ["-Ctarget-cpu=sandybridge", "-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]

[lib]
name = "void"
path = "src/lib/lib.rs"

[[bin]]
name = "void-cli"
path = "src/cli/main.rs"

[[bin]]
name = "void-gui"
path = "src/gui/main.rs"
