[package]
name = "void"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
aes = "0.6.0"
blake2 = "0.9.2"
block-modes = "0.7.0"
bytesize = "1.1.0"
clap = { version = "4.0.26", features = ["derive"] }
flexbuffers = "0.2.2"
hex = "0.4.3"
hkdf = "0.10.0"
itertools = "0.10.5"
path-absolutize = "3.0.14"
rand = "0.8.5"
regex = "1.7.0"
serde_derive = "1.0.147"
tree_magic = "0.2.3"
walkdir = "2.3.2"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
# CLI dependencies
prettytable-rs = { version = "0.8.0", optional = true }
rpassword = { version = "5.0.1", optional = true }
term_size = { version = "0.3.2", optional = true }
# GUI dependencies
iced = { version = "0.5.2", features = ["image", "svg"], optional = true }
iced_native = { version = "0.6.1", optional = true }
rust-embed = { version = "6.4.2", optional = true }
rfd = { version = "0.10.0", optional = true }

[build-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.5"
clap_mangen = "0.2.4"

[features]
cli = [ "prettytable-rs", "rpassword", "term_size" ]
gui = [ "iced", "iced_native", "rust-embed", "rfd" ]

[profile.release]
lto = true
panic = 'abort'

# Add this to .cargo/config to use hardware-accelerated AES on Intel
# [build]
# rustflags = ["-Ctarget-cpu=sandybridge", "-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]

[lib]
name = "void"
path = "src/lib/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "void-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "void-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[package.metadata.bundle.bin.void-gui]
name = "Void"
identifier = "me.acristoffers.void"
icon = ["assets/icon.svg", "assets/icon.png", "assets/icon.icns", "assets/icon.ico"]
category = "Utility"
copyright = "Álan Crístoffer e Sousa"
long_description = """
Its goal is to provide a filesystem-like way of storing encrypted files. You can
add (encrypt), get (unencrypt) and manage (list, search, remove and move) files
and folders. It also allows to set/get store-only metadata.
"""
