[package]
name = "void"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
blake2 = "0.10.6"
bytesize = "1.2.0"
flexbuffers = "2.0.0"
hex = "0.4.3"
hkdf = "0.12.3"
itertools = "0.10.5"
path-absolutize = "3.0.14"
rand = "0.8.5"
regex = "1.7.1"
serde_derive = "1.0.156"
tree_magic = "0.2.3"
walkdir = "2.3.2"
aes-gcm = "0.10.1"
sha2 = "0.10.6"
clap = { version = "4.1.8", features = ["derive", "env"] }
serde = { version = "1.0.156", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
# CLI dependencies
prettytable-rs = { version = "0.10.0", optional = true }
rpassword = { version = "7.2.0", optional = true }
term_size = { version = "0.3.2", optional = true }
# GUI dependencies
iced = { version = "0.8.0", features = ["image", "svg"], optional = true }
iced_native = { version = "0.9.1", optional = true }
rust-embed = { version = "6.6.0", optional = true }
rfd = { version = "0.11.2", optional = true }

[build-dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
clap_complete = "4.1.4"
clap_mangen = "0.2.9"

[features]
cli = ["prettytable-rs", "rpassword", "term_size"]
gui = ["iced", "iced_native", "rust-embed", "rfd"]

[profile.release]
lto = true
panic = 'abort'

# Add this to .cargo/config to use hardware-accelerated AES on Intel
# [build]
# rustflags = ["-Ctarget-cpu=sandybridge", "-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]

[lib]
name = "void"
path = "src/lib/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "void-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "void-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[package.metadata.bundle.bin.void-gui]
name = "Void"
identifier = "me.acristoffers.void"
icon = ["assets/icon.svg", "assets/icon.png", "assets/icon.icns", "assets/icon.ico"]
category = "Utility"
copyright = "Álan Crístoffer e Sousa"
long_description = """
Its goal is to provide a filesystem-like way of storing encrypted files. You can
add (encrypt), get (unencrypt) and manage (list, search, remove and move) files
and folders. It also allows to set/get store-only metadata.
"""
