[package]
name = "void"
version = "0.0.1"
authors = ["Álan Crístoffer <acristoffers@gmail.com>"]
edition = "2018"

[dependencies]
aes = "0.6.0"
blake2 = "0.9.1"
block-modes = "0.7.0"
bytesize = "1.0.1"
clap = "2.33.3"
flexbuffers = "0.2.2"
hex = "0.4.2"
hkdf = "0.10.0"
itertools = "0.10.0"
path-absolutize = "3.0.6"
prettytable-rs = "0.8.0"
rand = "0.8.3"
regex = "1.4.3"
rpassword = "5.0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
structopt = "0.3.21"
tree_magic = "0.2.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
walkdir = "2.3.1"
term_size = "0.3.2"

[profile.release]
lto = true
panic = 'abort'

# Add this to .cargo/config to use hardware-accelerated AES
# [build]
# rustflags = ["-Ctarget-cpu=sandybridge", "-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]

[lib]
name = "void"
path = "src/lib/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "void-cli"
path = "src/cli/main.rs"
