[package]
name = "void-cli"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
void = { path = "../void" }
clap = { version = "4.6.0", features = ["derive", "env"] }
bytesize = "2.3.1"
prettytable-rs = { version = "0.10.0"}
rpassword = { version = "7.4.0"}
term_size = { version = "0.3.2"}

[build-dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
fs_extra = "1.3.0"

[[bin]]
name = "void-cli"
path = "src/main.rs"
