[package]
name = "void-cli"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Encrypted file store."

[dependencies]
void = { path = "../void" }
clap = { version = "4.6.0", features = ["derive", "env"] }
bytesize = "2.3.1"
prettytable-rs = { version = "0.10.0"}
rpassword = { version = "7.4.0"}
term_size = { version = "0.3.2"}

[build-dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
fs_extra = "1.3.0"

[[bin]]
name = "void-cli"
path = "src/main.rs"

[package.metadata.deb]
section = "utils"
depends = "$auto"
extended-description = """\
Its goal is to provide a filesystem-like way of storing encrypted files. You can \
add (encrypt), get (unencrypt) and manage (list, search, remove and move) files \
and folders. It also allows to set/get store-only metadata."""
assets = [
    ["target/release/void-cli", "usr/bin/", "755"],
    ["target/release/share/man/man1/void-cli.1", "usr/share/man/man1/", "644"],
    ["target/release/share/bash/completions/void-cli.bash", "usr/share/bash-completion/completions/void-cli", "644"],
    ["target/release/share/fish/completions/void-cli.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["target/release/share/zsh/completions/_void-cli", "usr/share/zsh/vendor-completions/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/void-cli", dest = "/usr/bin/void-cli", mode = "755" },
    { source = "target/release/share/man/man1/void-cli.1", dest = "/usr/share/man/man1/void-cli.1", mode = "644", doc = true },
    { source = "target/release/share/bash/completions/void-cli.bash", dest = "/usr/share/bash-completion/completions/void-cli", mode = "644" },
    { source = "target/release/share/fish/completions/void-cli.fish", dest = "/usr/share/fish/vendor_completions.d/void-cli.fish", mode = "644" },
    { source = "target/release/share/zsh/completions/_void-cli", dest = "/usr/share/zsh/site-functions/_void-cli", mode = "644" },
]
