[package]
name = "void-gui"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
libadwaita = "0.6.0"
void = { path = "../void" }

[build-dependencies]
glib-build-tools = "0.19.0"

[[bin]]
name = "void-gui"
path = "src/main.rs"

[package.metadata.bundle.bin.void-gui]
name = "Void"
identifier = "me.acristoffers.void"
icon = [ "assets/icon.svg", "assets/icon.png", "assets/icon.icns", "assets/icon.ico" ]
category = "Utility"
copyright = "Álan Crístoffer e Sousa"
long_description = """
Its goal is to provide a filesystem-like way of storing encrypted files. You can
add (encrypt), get (unencrypt) and manage (list, search, remove and move) files
and folders. It also allows to set/get store-only metadata.
"""
