[package]
name = "void-gui"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
libadwaita = { version = "0.9.1", features = ["v1_5"] }
gtk4 = { version = "0.11", features = ["v4_10"] }
gettext-rs = "0.7"
image = "0.25"
ffmpeg-next = "8"
regex = "1"
walkdir = "2"
void = { path = "../void" }

[build-dependencies]
glib-build-tools = "0.22.0"

[[bin]]
name = "void-gui"
path = "src/main.rs"

[package.metadata.bundle.bin.void-gui]
name = "Void"
identifier = "me.acristoffers.void"
icon = [ "assets/icon.svg", "assets/icon.png", "assets/icon.icns", "assets/icon.ico" ]
category = "Utility"
copyright = "Álan Crístoffer e Sousa"
long_description = """
Its goal is to provide a filesystem-like way of storing encrypted files. You can
add (encrypt), get (unencrypt) and manage (list, search, remove and move) files
and folders. It also allows to set/get store-only metadata.
"""
