[package]
name = "void"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
description = "Encrypted file store."

[dependencies]
blake2 = "0.10.6"
bytesize = "2.0.1"
flexbuffers = "25.2.10"
hex = "0.4.3"
hkdf = "0.12.4"
itertools = "0.14.0"
path-absolutize = "3.1.1"
rand = "0.9.0"
regex = "1.11.1"
serde_derive = "1.0.219"
tree_magic = "0.2.3"
walkdir = "2.5.0"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
clap = { version = "4.5.34", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[build-dependencies]
clap = { version = "4.5.34", features = ["derive", "env"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"

[lib]
name = "void"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]
