[package]
name = "void"
version = "1.0.0"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Encrypted file store."

[dependencies]
blake2 = "0.10.6"
bytesize = "2.3.1"
bincode = "1"
postcard = { version = "1", features = ["alloc"] }
hex = "0.4.3"
argon2 = "0.5"
itertools = "0.14.0"
path-absolutize = "3.1.1"
rand = "0.10.1"
regex = "1.12.3"
serde_derive = "1.0.228"
tree_magic = "0.2.3"
walkdir = "2.5.0"
aes-gcm = "0.10.3"

clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[build-dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"

[lib]
name = "void"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.deb]
name = "libvoid"
section = "libs"
depends = "$auto"
assets = [
    ["target/release/libvoid.so", "usr/lib/x86_64-linux-gnu/", "755"],
]

[package.metadata.generate-rpm]
name = "libvoid"
assets = [
    { source = "target/release/libvoid.so", dest = "/usr/lib64/libvoid.so", mode = "755" },
]
